NetBSD Problem Report #34138

From www@NetBSD.org  Fri Aug  4 09:33:12 2006
Return-Path: <www@NetBSD.org>
Received: by narn.NetBSD.org (Postfix, from userid 31301)
	id 6E83E63B964; Fri,  4 Aug 2006 09:33:12 +0000 (UTC)
Message-Id: <20060804093312.6E83E63B964@narn.NetBSD.org>
Date: Fri,  4 Aug 2006 09:33:12 +0000 (UTC)
From: ks@40.to
Reply-To: ks@40.to
To: gnats-bugs@NetBSD.org
Subject: pkgsrc/
X-Send-Pr-Version: www-1.0

>Number:         34138
>Category:       pkg
>Synopsis:       pkgsrc/
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    pkg-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Aug 04 09:35:00 +0000 2006
>Closed-Date:    Fri Aug 04 18:21:00 +0000 2006
>Last-Modified:  Fri Dec 19 21:35:00 +0000 2008
>Originator:     Karl Skibinski
>Release:        NetBSD vierzwo 3.0 NetBSD 3.0 (GENERIC) #0: Mon Dec 19 01:04:02 UTC 2005  builds@works.netbsd.org:/home/builds/ab/netbsd-3-0-RELEASE/i386/200512182024Z-obj/home/builds/ab/netbsd-3-0-RELEASE/src/sys/arch/i386/compile/GENERIC i386
>Organization:
private
>Environment:
>Description:

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: wiz@netbsd.org
State-Changed-When: Fri, 04 Aug 2006 18:21:00 +0000
State-Changed-Why:
Incomplete version of (solved) 34140.


From: Christos Zoulas <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/34138 CVS commit: src/usr.bin/make
Date: Fri, 19 Dec 2008 21:34:15 +0000 (UTC)

 Module Name:	src
 Committed By:	christos
 Date:		Fri Dec 19 21:34:14 UTC 2008

 Modified Files:
 	src/usr.bin/make: str.c

 Log Message:
 PR/34138: Roland Illig: In the non-expand case, fix brk_string not to eat
 quotes.


 To generate a diff of this commit:
 cvs rdiff -r1.29 -r1.30 src/usr.bin/make/str.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.