PR/34138: Roland Illig: In the non-expand case, fix brk_string not to eat quotes.